--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container text-center">
   <footer class="py-3 my-4">
     <p class="mt-4">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Dhruval Sharma All Rights Reserved</p>
   </footer>
