--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,7 @@
   <head>
     <title>{{companyName}}</title>
   </head>
-  <style>
-    #banner{
-      width: 100%;
-      height: 360px;
-    }
-  </style>
+
   <!-- Latest compiled and minified CSS -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -15,9 +10,9 @@
   <body>
     {%include 'navbar.html'%}
     <div class="container">
-      <img src="static/banner.jpeg" id='banner' class="img-fluid" alt="Responsive image">
-    <h1 class="text-center mt-4 mb-4">
-        Welcome to the career builder app
+      <img src="../static/banner.jpeg" style="width: 100%; height: 360px;" class="img-fluid" alt="Responsive image">
+      <h1 class="text-center mt-4 mb-4">
+        Welcome to Career Builder
     </h1>
   <div class="container">
   <div class="row">
@@ -32,15 +27,52 @@
     </div>
   </div>
   </div>
-    <h2 class="text-center mt-4 mb-4"> Open Positions</h2>
+    <h2 class="text-center mt-4 mb-4">Open Positions</h2>
     <p> 
       <!-- {{jobs}} -->
       {% for job in jobs %}
-        {% include 'jobitem.html' %}
+        <!-- {% include 'jobitem.html' %} -->
+        <div class="border-bottom row" style="margin-bottom: 16px;padding-bottom:4px;">
+          <div class="col-9">
+            <h4 style="color: rgb(120,120,120)">{{job['title']}}</h4>
+            <div><b>Location:</b>{{job['location']}}</div>
+            {% if 'salary' in job %}
+            <div><b>Salary:</b>{{job['salary']}}</div>
+            {% endif %}
+            
+            <div><b>Number of Applicants:</b> 
+              {% for applicant in list_applicants %}
+              {% if applicant[0]==job['id'] %}
+                {{applicant[1]}}
+              {% endif%}
+              {%endfor%}
+
+            <!-- {% set applicant_count = 0 %}
+            {% for applicant in list_applicants %}
+              {% if applicant[0] == job['id'] %}
+                {% set applicant_count = applicant[1] %}
+              {% endif %}
+            {% endfor %}
+            {{ applicant_count }} -->
+            
+
+            </div>
+          </div>
+          
+          <div class="col-3">
+            <a href="/job/{{job['id']}}">
+            <button type="button" class="btn btn-outline-primary">
+              Apply
+            </button>
+            </a>
+          </div>
+        </div>
       {%endfor%}
     </p>
     <div class="text-center mt-2 mb-4">
+    <a href="/contactus">
     <button type="button" class="btn btn-primary btn-lg">Contact Us</button>
+  </a>
       {%include 'footer.html' %}
     </div>
     </div>
